add tests for jstgc